--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "sweetalert2": "^9.3.13",
     "tailwindcss": "^1.1.3"
